[gd_scene load_steps=42 format=3 uid="uid://bva30amydl0dh"]

[ext_resource type="Script" path="res://scenes/entities/hera.gd" id="1_ho017"]
[ext_resource type="Texture2D" uid="uid://vjvrhc0in0d" path="res://assets/sprites/entities/hera/hera_idle.png" id="1_u01f5"]
[ext_resource type="Texture2D" uid="uid://b0v5xl4474eqk" path="res://assets/sprites/entities/hera/hera_attack.png" id="2_axnrg"]
[ext_resource type="Script" path="res://scenes/entities/damageable.gd" id="2_ebo14"]
[ext_resource type="Texture2D" uid="uid://ddjv6uf36rf16" path="res://assets/sprites/entities/hera/hera_damaged.png" id="3_85txo"]
[ext_resource type="Script" path="res://scenes/entities/player_state_machine.gd" id="3_m0ogq"]
[ext_resource type="Texture2D" uid="uid://bdncrpqt1t0l3" path="res://assets/sprites/entities/hera/hera_teleport_appear.png" id="4_wlui7"]
[ext_resource type="Texture2D" uid="uid://cysjpbie1rn72" path="res://assets/sprites/entities/hera/hera_death.png" id="4_xtx7r"]
[ext_resource type="Texture2D" uid="uid://b4yhaysowma24" path="res://assets/sprites/entities/hera/hera_teleport_away.png" id="6_2bpie"]
[ext_resource type="Script" path="res://scenes/entities/hit_state.gd" id="8_rcelb"]
[ext_resource type="Script" path="res://scenes/entities/state.gd" id="9_4mqj3"]
[ext_resource type="Script" path="res://scenes/entities/hera_ground.gd" id="11_i3awe"]
[ext_resource type="Script" path="res://scenes/entities/hera_appear.gd" id="12_ur7p3"]
[ext_resource type="Script" path="res://scenes/entities/hera_disappear.gd" id="13_332rd"]
[ext_resource type="Script" path="res://scenes/entities/hera_attack.gd" id="13_lxbor"]
[ext_resource type="AudioStream" uid="uid://dm7y8w115ftum" path="res://assets/music/sfx/hera_attack_audio.wav" id="16_yhg3e"]
[ext_resource type="AudioStream" uid="uid://iv7w7jcahjfi" path="res://assets/music/sfx/hera_teleport_audio.wav" id="17_f0xx0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ijne"]
size = Vector2(294.286, 684)

[sub_resource type="Animation" id="Animation_jykia"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_aov2m"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_axnrg")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_sjiqs"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_xtx7r")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_y4db6"]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_85txo")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_200x7"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_u01f5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8brpl"]
resource_name = "teleport_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_wlui7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_78t5q"]
resource_name = "teleport_out"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_2bpie")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bb23l"]
_data = {
"RESET": SubResource("Animation_jykia"),
"attack": SubResource("Animation_aov2m"),
"death": SubResource("Animation_sjiqs"),
"hit": SubResource("Animation_y4db6"),
"idle": SubResource("Animation_200x7"),
"teleport_in": SubResource("Animation_8brpl"),
"teleport_out": SubResource("Animation_78t5q")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3mjpt"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fxy15"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tkf33"]
animation = &"hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4do08"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b1aph"]
animation = &"teleport_in"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v1ocn"]
animation = &"teleport_out"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tmuka"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2yq6q"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q136f"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pg042"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yh825"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3ph5v"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mrm88"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_04xlc"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_wc0r4"]
states/End/position = Vector2(1116, 100)
states/attack/node = SubResource("AnimationNodeAnimation_3mjpt")
states/attack/position = Vector2(669, 116)
states/death/node = SubResource("AnimationNodeAnimation_fxy15")
states/death/position = Vector2(941, 173)
states/hit/node = SubResource("AnimationNodeAnimation_tkf33")
states/hit/position = Vector2(200, 173)
states/idle/node = SubResource("AnimationNodeAnimation_4do08")
states/idle/position = Vector2(511, 67)
states/teleport_in/node = SubResource("AnimationNodeAnimation_b1aph")
states/teleport_in/position = Vector2(332, 100)
states/teleport_out/node = SubResource("AnimationNodeAnimation_v1ocn")
states/teleport_out/position = Vector2(957, 100)
transitions = ["Start", "teleport_in", SubResource("AnimationNodeStateMachineTransition_tmuka"), "teleport_in", "idle", SubResource("AnimationNodeStateMachineTransition_2yq6q"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_q136f"), "idle", "hit", SubResource("AnimationNodeStateMachineTransition_pg042"), "hit", "teleport_out", SubResource("AnimationNodeStateMachineTransition_yh825"), "hit", "death", SubResource("AnimationNodeStateMachineTransition_3ph5v"), "teleport_out", "teleport_in", SubResource("AnimationNodeStateMachineTransition_mrm88"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_04xlc")]

[node name="Hera" type="CharacterBody2D" node_paths=PackedStringArray("hit_state")]
scale = Vector2(0.7, 0.7)
collision_layer = 4
script = ExtResource("1_ho017")
hit_state = NodePath("PlayerStateMachine/HitState")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5.71427, 18)
shape = SubResource("RectangleShape2D_6ijne")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_85txo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bb23l")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
libraries = {
"": SubResource("AnimationLibrary_bb23l")
}
tree_root = SubResource("AnimationNodeStateMachine_wc0r4")
anim_player = NodePath("../AnimationPlayer")

[node name="Damageable" type="Node" parent="."]
script = ExtResource("2_ebo14")
health = 5.0

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state", "character", "animation_tree")]
script = ExtResource("3_m0ogq")
current_state = NodePath("Appear")
character = NodePath("..")
animation_tree = NodePath("../AnimationTree")

[node name="HitState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("damageable", "playerStateMachine", "dead_state", "return_state")]
script = ExtResource("8_rcelb")
damageable = NodePath("../../Damageable")
playerStateMachine = NodePath("..")
dead_state = NodePath("../Die")
knockback_speed = 300.0
return_state = NodePath("../Disappear")

[node name="Timer" type="Timer" parent="PlayerStateMachine/HitState"]
wait_time = 0.4

[node name="Ground" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("playerStateMachine", "return_state")]
script = ExtResource("11_i3awe")
playerStateMachine = NodePath("..")
return_state = NodePath("../Attack")

[node name="Timer" type="Timer" parent="PlayerStateMachine/Ground"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Die" type="Node" parent="PlayerStateMachine"]
script = ExtResource("9_4mqj3")

[node name="Attack" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("playerStateMachine", "return_state", "attack_sfx")]
script = ExtResource("13_lxbor")
playerStateMachine = NodePath("..")
return_state = NodePath("../Ground")
attack_sfx = NodePath("../../SFX/Attack")

[node name="ProjectileContainer" type="Node2D" parent="PlayerStateMachine/Attack"]
scale = Vector2(0.7, 0.7)

[node name="Timer" type="Timer" parent="PlayerStateMachine/Attack"]
autostart = true

[node name="Appear" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("playerStateMachine", "return_state")]
script = ExtResource("12_ur7p3")
playerStateMachine = NodePath("..")
return_state = NodePath("../Ground")

[node name="Timer" type="Timer" parent="PlayerStateMachine/Appear"]
one_shot = true
autostart = true

[node name="Disappear" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("damageable", "playerStateMachine", "return_state", "teleport_sfx")]
script = ExtResource("13_332rd")
damageable = NodePath("../../Damageable")
playerStateMachine = NodePath("..")
return_state = NodePath("../Appear")
teleport_sfx = NodePath("../../SFX/Teleport")

[node name="Timer" type="Timer" parent="PlayerStateMachine/Disappear"]
wait_time = 1.2
one_shot = true
autostart = true

[node name="SFX" type="Node" parent="."]

[node name="Attack" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("16_yhg3e")
volume_db = -1.0
max_distance = 8000.0

[node name="Teleport" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("17_f0xx0")
volume_db = -2.0
max_distance = 10000.0

[connection signal="animation_finished" from="AnimationTree" to="Damageable" method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="PlayerStateMachine/HitState/Timer" to="PlayerStateMachine/HitState" method="_on_timer_timeout"]
[connection signal="timeout" from="PlayerStateMachine/Ground/Timer" to="PlayerStateMachine/Ground" method="_on_timer_timeout"]
[connection signal="timeout" from="PlayerStateMachine/Attack/Timer" to="PlayerStateMachine/Attack" method="_on_timer_timeout"]
[connection signal="timeout" from="PlayerStateMachine/Appear/Timer" to="PlayerStateMachine/Appear" method="_on_timer_timeout"]
[connection signal="timeout" from="PlayerStateMachine/Disappear/Timer" to="PlayerStateMachine/Disappear" method="_on_timer_timeout"]
